# seqair

./: .dockerignore  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  README.md  index.html
.claude/plans/: pileup-column-aggregation.md
.github/workflows/: ci.yml  fuzz.yml  spec.yml
.zed/: settings.json
assets/: style.css
claude/plans/: hts-tests.md
crates/seqair/: CHANGELOG.md  Cargo.toml
crates/seqair-types/: CHANGELOG.md  Cargo.toml  README.md
crates/seqair/fuzz/: Cargo.toml  Dockerfile.x86_64  README.md  generate_seeds.py  run_all.sh
crates/seqair/fuzz/fuzz_targets/: fuzz_bam_aux.rs  fuzz_bam_fields.rs  fuzz_bam_index.rs  fuzz_bam_record.rs  fuzz_bgzf.rs  fuzz_cram_block.rs  fuzz_cram_codecs.rs  fuzz_cram_container.rs  fuzz_cram_header.rs  fuzz_cram_varint.rs  fuzz_fasta_index.rs  fuzz_gzi.rs  fuzz_pileup_full.rs  fuzz_reader_bam.rs  fuzz_reader_indexed.rs  fuzz_readers_pileup.rs  fuzz_sam_header.rs  fuzz_structured_pileup.rs
crates/seqair/fuzz/seeds/fuzz_reader_bam/: test.bam  test_small.bam
crates/seqair/fuzz/seeds/fuzz_reader_indexed/: bam_seed  cram_seed
docs/spec/: 0-1-bam-flags.md  0-pos.md  1-1-unified_reader.md  1-2-bgzf.md  1-3-cigar.md  2-bam-1-reader.md  (+32 more)
seqair/: 0-bam-flags.html  0-general.html  0-pos.html  1-1-unified_reader.html  1-2-bgzf.html  1-3-cigar.html  1-phred.html  2-bam-1-reader.html  2-bam-2-index.html  2-bam-3-1-header.html  2-bam-3-2-record.html  2-bam-3-4-seq_codec.html  2-base-3-3-decode.html  2-cram-1-reader.html  2-fasta.html  2-sam-1-reader.html  2-tabix.html  3-record_store.html  3-region_buf.html  4-pileup-dedup.html  4-pileup-indels.html  4-pileup.html  5-bcf-encoder.html  5-bcf-writer.html  5-index-builder.html  5-vcf-header.html  5-vcf-record.html  5-vcf-writer.html  6-bam-record-builder.html  6-bam-writer.html  8-perf.html  99-references.html  index.html
(+130 files in other folders)
